--- a/app/locale/ga/LC_MESSAGES/django.po
+++ b/app/locale/ga/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-12-31 02:07+0000\n"
+"POT-Creation-Date: 2023-01-01 22:37+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -148,7 +148,38 @@ msgstr "garniblín"
 msgid "cousin"
 msgstr "col ceathrair"
 
-#: agents/serialize.py:94
+#: agents/models/romanticRelationship.py:8
+msgid "Dating"
+msgstr "Geandála"
+
+#: agents/models/romanticRelationship.py:9
+msgid "Cohabitation"
+msgstr "Comhchónaí"
+
+#: agents/models/romanticRelationship.py:10
+msgid "Engaged"
+msgstr "Geallta"
+
+#: agents/models/romanticRelationship.py:11
+msgid "Married"
+msgstr "Pósta"
+
+#: agents/models/romanticRelationship.py:59
+msgid "Spouse"
+msgstr "Céile"
+
+#. Translators: Using this in a gender-neutral sense here.
+#. Whilst there's often a spelling difference based on gender, there seems to be
+#. growing acceptance of using the previously male form in a gender-neutral way now
+#: agents/models/romanticRelationship.py:64
+msgid "Fiancé"
+msgstr ""
+
+#: agents/models/romanticRelationship.py:65
+msgid "Partner"
+msgstr "Páirtí"
+
+#: agents/serialize.py:97
 msgid "Me"
 msgstr "Mise"
 
